# zotero-study-guide-app

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  LICENSE  README.md  color_config.yaml  llm_config.yaml  pyproject.toml  requirements.txt  wsgi.py
deploy/: README.md  push_and_deploy.sh
docs/: GETTING_STARTED.md  GUIDE.md  PIPELINE_EVALUATION.md  README.md  REPOSITORY.md
interactive_practice_exam/: build_exam.py  parse_exam.py
interactive_practice_exam/exam_toolkit/: __init__.py  docx_parser.py  exam_config.py  question_types.py  renderers.py
interactive_practice_exam/exams/: __init__.py
sample-data/: Annotations.html  Annotations.md
scripts/: metrics.sh
src/zsg/: __init__.py  app.py  build_guide.py  export.py  generate.py  json_repair.py  metrics.py  metrics_dashboard.py  pipeline_runner.py  preprocess.py  verify.py
src/zsg/prompts/: narrative.txt  quiz.txt  quiz_from_narrative.txt
src/zsg/static/: app.css  app.js  client-mode.js  guide.css  guide.js  guides.js  review.css  review.js  storage.js
src/zsg/templates/: review.html
tests/: bench_pipeline.py  test_bugs.py  test_concurrency.py  test_metrics.py  test_metrics_s3.py  test_preprocess.py  test_v2_api.py
tests/e2e/: conftest.py  test_client_mode_happy_path.py
tests/e2e/fixtures/: sample_zotero.html
tests/fixtures/civil_rights_m7/: annotations.json  output.html  sections.json  state.json
tests/js/: test_quiz_worthy_role.mjs
